--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">isd</string>
+    <string name="login">Sign in</string>
+    <string name="text1"> Email: </string>
+    <string name="text2"> Password: </string>
+
+    <string name="welcome">Welcome to LBPower</string>
+
+
 </resources>
